cmake_minimum_required(VERSION 3.29)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

project(imgui)

option(RL_BRIDGE_RAYLIB_LIBRARY_DIR "Path to raylib" "")

if(NOT RL_BRIDGE_RAYLIB_LIBRARY_DIR)
  message(STATUS "Must Set RL_BRIDGE_RAYLIB_LIBRARY_DIR path to raylib")
  return(1)
endif()

find_library(
  RL_BRIDGE_RAYLIB_LIBRARY
  NAMES raylib
  HINTS "${RL_BRIDGE_RAYLIB_LIBRARY_DIR}/lib" REQUIRED)

message(STATUS "RAYLIB_DIR: ${RL_BRIDGE_RAYLIB_LIBRARY_DIR}")
message(STATUS "RAYLIB_LIBRARY: ${RL_BRIDGE_RAYLIB_LIBRARY}")

file(GLOB CXX_SRC "src/*.cpp")

add_library(${PROJECT_NAME} ${CXX_SRC})

target_include_directories(${PROJECT_NAME} PUBLIC include/)
target_include_directories(${PROJECT_NAME}
                           PRIVATE ${RL_BRIDGE_RAYLIB_LIBRARY_DIR}/include)
target_link_libraries(${PROJECT_NAME} PUBLIC ${RL_BRIDGE_RAYLIB_LIBRARY})
